--- a/Movies.wiki
+++ b/Movies.wiki
@@ -62,7 +62,8 @@
 
 == Feb, 2012 ==
 * _Another Year_, 2011. Life is a finite loop of aging, maturing, losing, and discovering.
+* _J. Edgar_, 2011.
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: February 10, 2012 20:58:03 
+Last Modified: February 18, 2012 23:11:46 
