--- a/Movies.wiki
+++ b/Movies.wiki
@@ -64,7 +64,8 @@
 * _Another Year_, 2011. Life is a finite loop of aging, maturing, losing, and discovering.
 * _J. Edgar_, 2011.
 * _Life Without Principle (夺命金)_, 2011.
+* _West Side Story_, 1961.
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: February 20, 2012 00:22:32 
+Last Modified: February 28, 2012 08:02:46 
