--- a/Movies.wiki
+++ b/Movies.wiki
@@ -65,7 +65,10 @@
 * _J. Edgar_, 2011.
 * _Life Without Principle (夺命金)_, 2011.
 * _West Side Story_, 1961.
+
+== Mar, 2012 ==
+* _The Girl with the Dragon Tattoo_, 2011.
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: February 28, 2012 08:02:46 
+Last Modified: March 03, 2012 12:35:15 
