--- a/Movies.wiki
+++ b/Movies.wiki
@@ -68,7 +68,8 @@
 
 == Mar, 2012 ==
 * _The Girl with the Dragon Tattoo_, 2011.
+* _Gangs of New York_, 2002.
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: March 03, 2012 12:35:15 
+Last Modified: April 02, 2012 17:32:04 
