--- a/Movies.wiki
+++ b/Movies.wiki
@@ -69,7 +69,8 @@
 == Mar, 2012 ==
 * _The Girl with the Dragon Tattoo_, 2011.
 * _Gangs of New York_, 2002.
+* _Titanic 3D_, 1997.
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: April 02, 2012 17:32:04 
+Last Modified: Sun 15 Apr 2012 08:46:38 PM CST
