--- a/Movies.wiki
+++ b/Movies.wiki
@@ -70,7 +70,8 @@
 * _The Girl with the Dragon Tattoo_, 2011.
 * _Gangs of New York_, 2002.
 * _Titanic 3D_, 1997.
+* _Carnage_, 2011.
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: Sun 15 Apr 2012 08:46:38 PM CST
+Last Modified: April 17, 2012 20:30:21 
