--- a/Linux Notes.wiki
+++ b/Linux Notes.wiki
@@ -7,9 +7,9 @@ screen, tmux, conqueterm vim plugin, awesome, xmonad
 - haskell-platform is not packaged for Ubuntu 10.04LTS. Use this outdated ppa: https://launchpad.net/~justinbogner/+archive/haskell-platform
 - In Ubuntu, software sources are maintained in `/etc/apt/sources.list`. To avoid key/signatures problems, use the command `sudo add-apt-repository`. Also `sudo apt-get update`.
 
-== (General) Notes ==
-`#` Auto-completion: Check out `man gnome-` and press `<Tab>`.<br />
-`#` Use S+ page up/down to scroll up and down in the Gnome Terminal.<br />
+== General Notes ==
+* When Page Up/Down don't work, also press Shift<br />
+* If you want to display anything when a terminal is called up (greetings, todo's, date, etc.), put the echo statements into the `.bashrc` file.
 
 == Tricks/Tasks ==
 - [[run_command][Automatically run commands after Linux starts]].
@@ -18,8 +18,6 @@ screen, tmux, conqueterm vim plugin, awesome, xmonad
 *ls*<br />
 `ls -a` # `.` before files/directories names means they are hidden files/directories.<br />
 `ls -l` # to show the file types.<br />
-
-`cat` # concatenate files and print on standard output.<br />
 `df` (_disk full_ or _disk free_) # display information about the partitions and their mount points<br />
 `which` # to see where a command locates<br />
 `pwd` # print name of current/working directory<br />
@@ -54,4 +52,4 @@ screen, tmux, conqueterm vim plugin, awesome, xmonad
 ------
 %title Linux Notes - Covi
 Created Date: Feb 17, 2011 23:00:39<br />
-Last Modified: Sun 26 Feb 2012 02:37:49 PM CST
+Last Modified: Sat 21 Apr 2012 10:18:55 PM CST
