--- a/Movies.wiki
+++ b/Movies.wiki
@@ -71,7 +71,8 @@
 * _Gangs of New York_, 2002.
 * _Titanic 3D_, 1997.
 * _Carnage_, 2011.
+* _The Company_ (mini series), 2007.
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: April 17, 2012 20:30:21 
+Last Modified: Mon 23 Apr 2012 10:40:07 PM CST
