--- a/index.wiki
+++ b/index.wiki
@@ -23,16 +23,13 @@ The Wiki records some academic notes and some of my interests.
   * [[Combinatorics]], notes/problems/solutions/questions on combinatorics.
   * [[Modeling]].
 * Computer Science (Github (codes, projects, work): https://github.com/concretevitamin/)
+  * Notes: [[Machine Learning Notes]]. [[NOIP Notes][Some basic notes]]. [[Python Notes]]. [[AP Computer Science]]. [[Graph Theory and Algorithms]].
   * [[gcc][Notes on gcc/g++]]. Options/Compiling/Make.
-  * [[ProjectEuler][My Project Euler Codes]].
+  * [[ProjectEuler][My Project Euler Codes]]. [[snippets][Collection of Code Snippets]].
   * [[NOIP 2011 Prep][My Preparation for NOIP 2011]].
   * [[Sol To DP Book][Solutions to Problems in The Art and Theory of Dynamic Programming]]. 
-  * [[NOIP Notes][Some basic notes]]. 
-  * [[Graph Theory and Algorithms]].
-  * [[AP Computer Science]]; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
-  * [[Python Notes]]. I find learning Python a great break from college applications.
   * [[wordcount][wordcount.py, with interesting results!]] wordcount.py is a small python program I wrote for fun. Check out the results!
-  * [[snippets][Collection of Code Snippets]]. Good stuff.
+  * 
 * [[LaTeX]], notes on !LaTeX.
 * [[Linux Notes][Notes on Linux]].
 * [[Physics]].
@@ -61,4 +58,4 @@ http://geotakucovi.com/mail0.png
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: March 10, 2012 11:17:37 
+Last Modified: May 23, 2012 23:26:14 
