--- a/Machine Learning Notes.wiki
+++ b/Machine Learning Notes.wiki
@@ -10,4 +10,4 @@ Since Apr 2012 I have been taking Coursera.org's online Machine Learning course.
 -----
 %title Machine Learning Notes - Covi
 Creation Date: May 23, 2012 23:23:51<br />
-Last Modified: May 23, 2012 23:30:54 
+Last Modified: Fri 08 Jun 2012 12:50:45 PM CST
