--- a/index.wiki
+++ b/index.wiki
@@ -24,7 +24,7 @@ The Wiki records some academic notes and some of my interests.
   * [[Modeling]].
 * Computer Science (Github (codes, projects, work): https://github.com/concretevitamin/)
   * [[Machine Learning Notes][Machine Learning (ML)]]. [[NLP Notes][Natural Language Processing (NLP)]].
-  * Notes: .  [[NOIP Notes][Some basic notes]].  [[Python Notes]].  [[AP Computer Science]].  [[Graph Theory and Algorithms]].  [[gcc][Notes on gcc/g++]]. 
+  * (Other Notes) [[NOIP Notes][Some basic notes]].  [[Python Notes]].  [[AP Computer Science]].  [[Graph Theory and Algorithms]].  [[gcc][Notes on gcc/g++]]. 
   * [[ProjectEuler][My Project Euler Codes]]. [[snippets][Collection of Code Snippets]].
   * [[NOIP 2011 Prep][My Preparation for NOIP 2011]].
   * [[Sol To DP Book][Solutions to Problems in The Art and Theory of Dynamic Programming]]. 
@@ -57,4 +57,4 @@ http://geotakucovi.com/mail0.png
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: June 10, 2012 00:02:17 
+Last Modified: June 10, 2012 00:08:48 
