--- a/Movies.wiki
+++ b/Movies.wiki
@@ -85,7 +85,8 @@
 
 == June, 2012 ==
 * _Margin Call_, 2011.
+* _A Beautiful Mind_, 2001.
 ------
 %title Movies I've Watched
 Creation Date: Feb 09, 2011 0:13:47<br />
-Last Modified: June 12, 2012 00:28:13 
+Last Modified: June 20, 2012 22:47:45 
