--- a/Movies.wiki
+++ b/Movies.wiki
@@ -86,7 +86,10 @@
 == June, 2012 ==
 * _Margin Call_, 2011.
 * _A Beautiful Mind_, 2001.
+
+== July, 2012 ==
+* _桃姐 (A Simple Life)_, 2011.
 ------
 %title Movies I've Watched
 Creation Date: Feb 09, 2011 0:13:47<br />
-Last Modified: June 20, 2012 22:47:45 
+Last Modified: July 01, 2012 22:05:27 
