--- a/Movies.wiki
+++ b/Movies.wiki
@@ -89,7 +89,10 @@
 
 == July, 2012 ==
 * _桃姐 (A Simple Life)_, 2011.
+* _In Bruges_, 2008.
+* _Shameless_ (TV series), Season 1-2.
+* _Hatfields and McCoys_, (mini TV series), Part 1-3.
 ------
 %title Movies I've Watched
 Creation Date: Feb 09, 2011 0:13:47<br />
-Last Modified: July 01, 2012 22:05:27 
+Last Modified: Sun 22 Jul 2012 11:48:33 AM CST
